@@ -3,6 +3,8 @@ package org.apache.lucene.facet.index.categorypolicy;
 import java.io.Serializable;
 
 import org.apache.lucene.facet.index.streaming.CategoryParentsStream;
+import org.apache.lucene.facet.search.FacetsAccumulator;
+import org.apache.lucene.facet.taxonomy.TaxonomyReader;
 import org.apache.lucene.facet.taxonomy.TaxonomyWriter;
 
 /*
@@ -27,12 +29,40 @@ import org.apache.lucene.facet.taxonomy.TaxonomyWriter;
  * category ordinal is added to the stream, and than its parents are being added
  * one after the other using {@link TaxonomyWriter#getParent(int)}. <br>
  * That loop should have a stop point - the default approach (excluding the
- * ROOT) is implemented in {@link DefaultOrdinalPolicy}.
+ * ROOT) is implemented in {@link OrdinalPolicy#ALL_PARENTS}.
  * 
  * @lucene.experimental
  */
 public interface OrdinalPolicy extends Serializable {
 
+  /**
+   * An {@link OrdinalPolicy} which never stores parent ordinals. Useful if you
+   * only want to store the exact categories that were added to the document.
+   * Note that this is a rather expert policy, which requires a matching
+   * {@link FacetsAccumulator} that computes the weight of the parent categories
+   * on-the-fly.
+   */
+  public static final OrdinalPolicy NO_PARENTS = new OrdinalPolicy() {
+    @Override
+    public boolean shouldAdd(int ordinal) { return false; }
+
+    @Override
+    public void init(TaxonomyWriter taxonomyWriter) {}
+  };
+
+  /**
+   * An {@link OrdinalPolicy} which stores all parent ordinals, except
+   * {@link TaxonomyReader#ROOT_ORDINAL}. This is the default
+   * {@link OrdinalPolicy} and works with the default {@link FacetsAccumulator}.
+   */
+  public static final OrdinalPolicy ALL_PARENTS = new OrdinalPolicy() {
+    @Override
+    public boolean shouldAdd(int ordinal) { return ordinal > TaxonomyReader.ROOT_ORDINAL; }
+    
+    @Override
+    public void init(TaxonomyWriter taxonomyWriter) {}
+  };
+  
   /**
    * Check whether a given category ordinal should be added to the stream.
    * 
